--- a/css/style.css
+++ b/css/style.css
@@ -70,181 +70,24 @@ textarea {
 [2. Navbar / .navbar]
 */
 
-.navbar .container {
-	position: relative;
-}
-
-.navbar-inner {
-	padding: 7px 0;
-	
+nav {
 	background: #00ba8b !important;
-	
-	-moz-border-radius: 0;
-	-webkit-border-radius: 0;
 	border-radius: 0;
 }
 
-.navbar-fixed-top {
-	position: static;
-}
-
-.navbar .nav a {
-	font-size: 11px;
-}
-.navbar .nav>li>a { color:#fff !important;}
-.navbar .brand {
+nav .navbar-brand {
 	font-weight: 600;
 	position: relative;
 	top: 2px;
 }
 
-.navbar .search-query {
-	background-color: #444;
-	width: 150px;
-	font-size: 11px;
-	font-weight: bold;
-}
-
-.navbar .search-query::-webkit-input-placeholder {
-    color: #666;
-}
-
-.navbar .search-query:-moz-placeholder {
-    color: #666;
-}
-
-.navbar-search .search-query { background:#008866; border:0; color:#fff; line-height:normal;}
-
-
-/*------------------------------------------------------------------
-[3. Subnavbar / .subnavbar]
-*/
-
-.subnavbar {
-    	margin-bottom: 2.5em;
-    }
-    
-.subnavbar-inner {
-	height: 60px;
-	background: #fff;
-	border-bottom: 1px solid #d6d6d6;
-}
-
-.subnavbar .container > ul {
-	display: inline-block;
-	
-	height: 80px;
-	padding: 0;
-	margin: 0;
-	
-}
-
-.subnavbar .container > ul > li {
-	float: left;
-	
-	min-width: 90px;
-	height: 60px;
-	padding: 0;
-	margin: 0;
-	
-	text-align: center;
-	list-style: none;
-	
-	border-left: 1px solid #d9d9d9;
-	
-	
-}
-
-.subnavbar .container > ul > li > a {
-	display: block;
-	
-	height: 100%;
-	padding: 0 15px;
-	
-	font-size: 12px;
-	font-weight: bold;
-	color: #b2afaa;
-}
-
-.subnavbar .container > ul > li > a:hover {
-	color: #888;
+nav a {
+	color:white !important;
 	text-decoration: none;
 }
 
-.subnavbar .container > ul > li > a > i {
-	display: inline-block;
-	
-	width: 24px;
-	height: 24px;
-	margin-top: 11px;
-	margin-bottom: -3px;
-	font-size: 20px;
-}
-
-.subnavbar .container > ul > li > a > span {
-	display: block;
-	
-}
-
-
-.subnavbar .container > ul > li:hover > a {
-	
-	border-bottom:3px solid #ff7f74;
-	color: #383838;
-}
-    
-
-.subnavbar .dropdown .dropdown-menu a {
-	font-size: 12px;
-}
-
-    
-.subnavbar .dropdown .dropdown-menu {
-    text-align: left;
-    	
-	-webkit-border-top-left-radius: 0;
-	-webkit-border-top-right-radius: 0;
-	-moz-border-radius-topleft: 0;
-	-moz-border-radius-topright: 0;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
-}
-    
-    
-    
-.subnavbar .dropdown-menu::before {
-	content: '';
-	display: inline-block;
-	border-left: 7px solid transparent;
-	border-right: 7px solid transparent;
-	border-bottom: 7px solid #CCC;
-	border-bottom-color: rgba(0, 0, 0, 0.2);
-	position: absolute;
-	top: -7px;
-	left: 9px;
-}
-
-.subnavbar .dropdown-menu::after {
-	content: '';
-	display: inline-block;
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-bottom: 6px solid white;
-	position: absolute;
-	top: -6px;
-	left: 10px;
-}
-
-
-.subnavbar .caret {
-	margin-top: 4px;
-	
-	border-top-color: white;
-	border-bottom-color: white;
-}
-
-.subnavbar .dropdown.open .caret {
-	display: none;
+nav .dropdown-menu a{
+	color:black !important;
 }
 
 
@@ -339,89 +182,20 @@ textarea {
 [6. Widget / .widget]
 */
 
-.widget {
-	
-	position: relative;
-	clear: both;
-	
-	width: auto;
-	
-	margin-bottom: 2em;
-		
-	overflow: hidden;
+.panel-heading {
+	cursor: move;
+	position:relative;
 }
-	
-.widget-header {
-	position: relative;
-        cursor: move;	
-	height: 40px;
-	line-height: 40px;
-	
-	background: #f9f6f1;
-	background:-moz-linear-gradient(top, #f9f6f1 0%, #f2efea 100%); /* FF3.6+ */
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#f9f6f1), color-stop(100%,#f2efea)); /* Chrome,Safari4+ */
-	background:-webkit-linear-gradient(top, #f9f6f1 0%,#f2efea 100%); /* Chrome10+,Safari5.1+ */
-	background:-o-linear-gradient(top, #f9f6f1 0%,#f2efea 100%); /* Opera11.10+ */
-	background:-ms-linear-gradient(top, #f9f6f1 0%,#f2efea 100%); /* IE10+ */
-	background:linear-gradient(top, #f9f6f1 0%,#f2efea 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f6f1', endColorstr='#f2efea');
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f6f1', endColorstr='#f2efea')";
-	
-	
-	border: 1px solid #d6d6d6;
-	
-	
-	-webkit-background-clip: padding-box;
-}	
-	
-.widget-header h3 {
-	position: relative;
-	top: 2px;
-	left: 10px;
-	
-	display: inline-block;
-	margin-right: 3em;
-		
-	font-size: 14px;
-	font-weight: 800;
-	color: #525252;
-	line-height: 18px;
-	
-	text-shadow: 1px 1px 2px rgba(255,255,255,.5);
+
+.btn-group{
+    position: absolute;
+    right: 8px;
+    top: 8px;
 }
-	
-.widget-header [class^="icon-"], .widget-header [class*=" icon-"] {
-		
-	display: inline-block;
-	margin-left: 13px;
-	margin-right: -2px;
-			
-	font-size: 16px;
-	color: #555;
+.panel-heading i, .panel-heading h3{
+	display:inline-block;
 	vertical-align: middle;
-}
-
-.widget-content {
-	padding: 20px 15px 15px;
-	background: #FFF;
-	
-	
-	border: 1px solid #D5D5D5;
-	
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-}
-
-.widget-header+.widget-content {
-	border-top: none;
-	
-	-webkit-border-top-left-radius: 0;
-	-webkit-border-top-right-radius: 0;
-	-moz-border-radius-topleft: 0;
-	-moz-border-radius-topright: 0;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
+	font-size: 16px;
 }
 
 .widget-nopad .widget-content {
@@ -1144,172 +918,3 @@ width: 11px;}
 	
 }
 
-
-
-
-
-/*------------------------------------------------------------------
-[1. Max Width: 767px]
-*/
-
-@media (max-width: 767px) {
-    	
-	#main {
-		padding: 0 10px;
-		margin-right: -20px;
-		margin-left: -20px;	
-	}
-	
-	
-	.subnavbar {
-		margin-left: -20px;
-		margin-right: -20px;	
-	}
-	
-	
-	.subnavbar-inner {
-		height: auto;
-	}
-	
-	.subnavbar .container > ul {
-		width: 100%;
-		height: auto;
-		
-		border: none;
-	}
-	
-	.subnavbar .container > ul > li {
-		width: 33%;
-		height: 70px;
-		margin-bottom: 0;
-		
-		border: none;
-	}
-	
-    
-    
-    .subnavbar .container > ul > li.active > a {
-		font-size: 11px;
-    	background: transparent;
-    }
-	
-	.subnavbar .container > ul > li > a > i {	
-		display: inline-block;	
-		margin-bottom: 0;
-		
-		font-size: 20px;
-	}
-	
-	
-	.subnavbar-open-right .dropdown-menu {
-		left: auto;
-		right: 0;
-	}
-	
-	.subnavbar-open-right .dropdown-menu:before {
-		left: auto;
-		right: 12px;
-	}
-	.subnavbar-open-right .dropdown-menu:after {
-		left: auto;
-		right: 13px;
-	}
-	
-	.extra {
-		margin-right: -20px;
-		margin-left: -20px;
-	}
-	
-	.extra .container {
-		padding: 0 20px;
-	}
-	
-	.footer {
-		margin-right: -20px;
-		margin-left: -20px;
-	}
-	
-	.footer .container {
-		padding: 0 20px;
-	}
-	
-	.footer .footer-terms {
-		text-align: left;
-	}
-	
-	.footer .footer-terms a {
-		margin-left: 0;
-		margin-right: 1em;
-	}
-
-}
-    
-
-
-
-
-/*------------------------------------------------------------------
-[2. Max Width: 979px]
-*/
-
-@media (max-width: 979px) {
-	
-	.navbar-fixed-top {
-		position: static;
-		
-		margin-bottom: 0;
-	}
-	
-	.subnavbar {
-	}
-	
-	.subnavbar .container {		
-		width: auto;
-	}
-
-	.widget-header {
-		height: 100%;
-	}
-
-	.widget-header h3 {
-		margin-right: 1em;
-	}
-
-	.js-refresh-info {
-		margin-left: 25px;
-	}
-}
-
-
-
-
-
-
-/*------------------------------------------------------------------
-[3. Max Width: 1199px]
-*/
-
-@media (max-width: 1199px) {
-	.navbar .search-query {
-		width: 200px;
-	}
-
-	.widget-header {
-		height: 100%;
-	}
-
-	.js-refresh-info {
-		margin-left: 25px;
-	}	
-}
-
-/* ----------------------------------------
-	Subnavbar CSS fix/work-around
-*/
-
-.container.nav-collapse.in {
-    overflow:visible;
-}
-.btn-navbar {
-    margin-top:-38px;
-}
