--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,6 @@ nav .dropdown-menu a{
 	color:black !important;
 }
 
-
-
-
-
 /*------------------------------------------------------------------
 [4. Main / .main]
 */
@@ -198,19 +194,25 @@ nav .dropdown-menu a{
 	font-size: 16px;
 }
 
-.widget-nopad .widget-content {
+.nopad-widget .panel-body {
 	padding: 0;
 }
 
-/* Widget Content Clearfix */	
-.widget-content:before,
-.widget-content:after {
-    content:"";
-    display:table;
+.table-widget .panel-body{
+	padding:0;
 }
 
-.widget-content:after {
-    clear:both;
+
+.table-widget table {
+	margin-bottom: 0;
+	border: none;
+}
+
+.table-widget table tr td:first-child {
+	border-left: none;
+}
+.table-widget table tr td:last-child {
+	border-right: none;
 }
 
 /* For IE 6/7 (trigger hasLayout) */
@@ -224,19 +226,7 @@ nav .dropdown-menu a{
 	padding: 0;
 }
 
-.widget-table .table {
-	margin-bottom: 0;
-	
-	border: none;
-}
 
-.widget-table .table tr td:first-child {
-	border-left: none;
-}
-
-.widget-table .table tr th:first-child {
-	border-left: none;
-}
 
 
 /* Widget Plain */
