--- a/Resources/Views/widget.html.twig
+++ b/Resources/Views/widget.html.twig
@@ -1,8 +1,9 @@
 <div id="{{ widget.id }}" class="widget col-md-{{ widget.size }}">
     <div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title"> 
-				{{ widget.title }}
+			<h3 class="panel-title">
+				<span class="fa fa-{{ widget.icon }}"></span>
+				<span class="widget-title">{{ widget.title }}</span>
 				<div class="btn-group btn-group-xs">
 					<span class="refresh-btn btn btn-xs btn-default">
 						<i class="fa fa-refresh"></i>
@@ -12,7 +13,6 @@
 					</span>
 				</div>
 			</h3>
-			
 		</div>
 		<div class="panel-body">
 			{{ widget.content | raw }}
